spade-tests/src/snapshots/spade_tests__typeinference__int_literal_too_large.snap
---
source: spade-tests/src/typeinference.rs
---
fn main() -> int<4> {
    8
}


error: Integer value does not fit in int<4>
  ┌─ testinput:2:5
  │
2 │     8
  │     ^ 8 does not fit in an int<4>
  │
  = note: int<4> fits integers in the range (-8, 7)
