spade-tests/src/snapshots/spade_tests__typeinference__non_generic_incorrect_reg_count_produces_useful_error.snap
---
source: spade-tests/src/typeinference.rs
---
pipeline(10) p(clk: clock, x: bool) -> bool {
    reg * {8};
    reg;
        x
}


error: Pipeline depth mismatch. Expected 10 got 9
  ┌─ testinput:1:45
  │  
1 │   pipeline(10) p(clk: clock, x: bool) -> bool {
  │            -- Type 10 inferred here
  │ ╭─────────────────────────────────────────────^
2 │ │     reg * {8};
3 │ │     reg;
4 │ │         x
5 │ │ }
  │ ╰─^ Found 9 stages in this pipeline
  │  
  = note: Expected: 9
               Got: 10
